--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,7 @@ img {
   width: 100%;
   height: 100%;
   transition: all 0.3s ease;
+  z-index: -1;
 }
 .hover-in-shadow:hover:after {
   box-shadow: var(--inner-shadow);
@@ -84,6 +85,7 @@ img {
   border-radius: 30px;
   transition: all 0.3s ease;
   display: inline-block;
+  border: none;
 }
 .btn-1::after {
   border-radius: 30px;
@@ -213,6 +215,9 @@ img {
   font-weight: 600;
   color: var(--skin-color);
 }
+.section.hide {
+  display: none;
+}
 
 /* header */
 .header {
@@ -287,6 +292,35 @@ img {
   opacity: 0;
   visibility: hidden;
   overflow-y: auto;
+}
+.fade-out-effect {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--bg-black-50);
+  z-index: -1;
+  visibility: hidden;
+}
+.fade-out-effect.active {
+  visibility: visible;
+  z-index: 1000;
+  animation: fadeOut 0.3s ease-out;
+}
+@keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+.nav-menu.open {
+  visibility: visible;
+  opacity: 1;
+  z-index: 999;
+  transition: all 0.3s ease-in;
 }
 .nav-menu .close-nav-menu {
   height: 40px;
@@ -481,7 +515,7 @@ img {
 .about-section .about-tabs .tab-item:hover:not(.active) {
   opacity: 0.6;
 }
-.about-section .about-tabs .tab-item .active {
+.about-section .about-tabs .tab-item.active {
   color: var(--skin-color);
 }
 
@@ -626,4 +660,235 @@ img {
   color: var(--text-black-600);
   line-height: 26px;
   margin: 15px 0 0;
+}
+
+/* service section */
+.service-section {
+  padding: 80px 0 80px;
+  min-height: 100vh;
+}
+.service-section .service-item {
+  flex: 0 0 33.33%;
+  max-width: 33.33%;
+  padding: 15px;
+  display: flex;
+  flex-wrap: wrap;
+}
+.service-section .service-item-inner {
+  padding: 40px 15px;
+  border-radius: 5px;
+  text-align: center;
+  width: 100%;
+}
+.service-section .service-item-inner .icon {
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  transition: all 0.3s ease;
+  display: block;
+  margin: 0 auto 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+.service-section .service-item-inner .icon::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  transition: all 0.3s ease;
+}
+.service-section .service-item-inner:hover .icon {
+  box-shadow: var(--inner-shadow-0);
+}
+.service-section .service-item-inner:hover .icon::after {
+  box-shadow: var(--outer-shadow);
+}
+.service-section .service-item-inner .icon i {
+  font-size: 25px;
+  line-height: 60px;
+  transition: all 0.3s ease;
+}
+.service-section .service-item-inner:hover {
+  color: var(--skin-color);
+  cursor: pointer;
+}
+.service-section .service-item-inner h3 {
+  font-size: 20px;
+  font-weight: 500;
+  color: var(--text-black-700);
+  margin: 0 0 10px;
+  text-transform: capitalize;
+}
+.service-section .service-item-inner p {
+  font-size: 16px;
+  color: var(--text-black-600);
+  margin: 0;
+  line-height: 25px;
+}
+
+/* portfolio section */
+.portfolio-section {
+  padding: 80px 0 80px;
+  min-height: 100vh;
+}
+.portfolio-section .section-title {
+  margin-bottom: 40px;
+}
+.portfolio-section .portfolio-filter {
+  padding: 0 15px;
+  flex: 0 0 100%;
+  max-width: 100%;
+  text-align: center;
+  margin-bottom: 20px;
+}
+.portfolio-section .filter-item {
+  display: inline-block;
+  margin: 0 5px 10px;
+  padding: 5px 10px;
+  border-radius: 30px;
+  cursor: pointer;
+  font-weight: 500;
+  color: var(--text-black-600);
+  text-transform: capitalize;
+  font-size: 16px;
+  transition: all 0.3s ease;
+}
+.portfolio-section .filter-item:hover:not(.active) {
+  opacity: 0.6;
+}
+.portfolio-section .filter-item.active {
+  color: var(--skin-color);
+}
+.portfolio-section .portfolio-item {
+  flex: 0 0 33.33%;
+  max-width: 33.33%;
+  padding: 15px;
+  display: flex;
+  flex-wrap: wrap;
+}
+.portfolio-section .portfolio-item-inner {
+  padding: 15px;
+  border-radius: 5px;
+  cursor: pointer;
+  width: 100%;
+}
+.portfolio-section .portfolio-item-img img {
+  border-radius: 5px;
+  width: 100%;
+  transition: all 0.3s ease;
+}
+.portfolio-section .portfolio-item-inner:hover .portfolio-item-img img {
+  transform: translateY(-25px);
+}
+.portfolio-section .portfolio-item-img {
+  position: relative;
+}
+.portfolio-section .portfolio-item-img .view-project {
+  text-transform: capitalize;
+  font-size: 16px;
+  font-weight: 500;
+  color: var(--skin-color);
+  transition: all 0.3s ease;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  transform: translate(5px, -5px);
+  z-index: -1;
+  opacity: 0;
+}
+.portfolio-section .portfolio-item-inner:hover .view-project {
+  transform: translate(5px, 0px);
+  opacity: 1;
+}
+.portfolio-section .portfolio-item-details {
+  display: none;
+}
+.portfolio-section .portfolio-item-inner p {
+  font-size: 16px;
+  margin: 10px 0 0;
+  color: var(--text-black-600);
+  text-transform: capitalize;
+}
+
+/* contact section */
+.contact-section {
+  padding: 80px 0 80px;
+  min-height: 100vh;
+}
+.contact-section .contact-item {
+  flex: 0 0 33.33%;
+  max-width: 33.33%;
+  padding: 15px;
+  display: flex;
+}
+.contact-section .contact-item-inner {
+  padding: 30px 15px;
+  text-align: center;
+  border-radius: 5px;
+  width: 100%;
+}
+.contact-section .contact-item-inner .icon {
+  font-size: 20px;
+  color: var(--skin-color);
+}
+.contact-section .contact-item-inner span {
+  display: block;
+  font-size: 16px;
+  font-weight: 600;
+  color: var(--text-black-700);
+  margin: 10px 0 5px;
+  text-transform: capitalize;
+}
+.contact-section .contact-item-inner p {
+  font-size: 16px;
+  color: var(--text-black-600);
+  line-height: 26px;
+  margin: 0;
+  word-break: break-word;
+}
+
+.contact-section .contact-form {
+  flex: 0 0 100%;
+  max-width: 100%;
+  margin-top: 50px;
+}
+.contact-section .w-50 {
+  padding: 0 15px;
+  flex: 0 0 50%;
+  max-width: 50%;
+}
+.contact-section .input-group {
+  margin: 0 0 25px;
+  transition: all 0.3s ease;
+  border-radius: 30px;
+}
+.contact-section .input-group::after {
+  border-radius: 30px;
+}
+.contact-section .input-group .input-control {
+  height: 40px;
+  display: block;
+  width: 100%;
+  border-radius: 30px;
+  border: none;
+  background-color: transparent;
+  font-size: 16px;
+  padding: 0 15px;
+  color: var(--text-black-600);
+}
+.contact-section .input-group textarea.input-control {
+  height: 174px;
+  padding-top: 15px;
+  resize: none;
+}
+.contact-section .submit-btn {
+  flex: 0 0 100%;
+  max-width: 100%;
+  text-align: right;
+  padding: 0 15px;
 }
